--- a/MyRSS/Base.lproj/LaunchScreen.storyboard
+++ b/MyRSS/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,15 +13,85 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="news" translatesAutoresizingMaskIntoConstraints="NO" id="FyR-Q9-3Rl">
+                                <rect key="frame" x="132" y="373" width="150" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="FyR-Q9-3Rl" secondAttribute="height" multiplier="1:1" id="4Ua-CC-kfK"/>
+                                    <constraint firstAttribute="width" constant="150" id="gjU-xW-q0I"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rss" translatesAutoresizingMaskIntoConstraints="NO" id="Sk9-ws-afy">
+                                <rect key="frame" x="52" y="473" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Sk9-ws-afy" secondAttribute="height" multiplier="1:1" id="3ns-Jr-dv9"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="earth" translatesAutoresizingMaskIntoConstraints="NO" id="7FE-FF-ehj">
+                                <rect key="frame" x="312" y="473" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="7FE-FF-ehj" secondAttribute="height" multiplier="1:1" id="udt-i6-f6W"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="최신 뉴스를 제공합니다." lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wFf-Dz-vJo">
+                                <rect key="frame" x="112" y="573" width="161" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="뉴스의 키워드를 알아보세요" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Odi-c4-9f7">
+                                <rect key="frame" x="112" y="598.5" width="185.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="뉴스를 클릭하면 원본 뉴스를 볼 수 있습니다." lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kNY-6s-V5y">
+                                <rect key="frame" x="112" y="624" width="190" height="41"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="v 1.0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="akr-om-bDX">
+                                <rect key="frame" x="191.5" y="794" width="31.5" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="kNY-6s-V5y" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="44k-2Y-65n"/>
+                            <constraint firstItem="Sk9-ws-afy" firstAttribute="width" secondItem="FyR-Q9-3Rl" secondAttribute="height" multiplier="1:3" id="CnP-Fx-Pbi"/>
+                            <constraint firstItem="wFf-Dz-vJo" firstAttribute="leading" secondItem="kNY-6s-V5y" secondAttribute="leading" id="HFc-1X-U2k"/>
+                            <constraint firstItem="wFf-Dz-vJo" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="kNY-6s-V5y" secondAttribute="trailing" id="LGI-zq-RiC"/>
+                            <constraint firstItem="Sk9-ws-afy" firstAttribute="bottom" secondItem="FyR-Q9-3Rl" secondAttribute="bottom" id="NXz-0n-efS"/>
+                            <constraint firstItem="FyR-Q9-3Rl" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="NoO-l8-yeO"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="akr-om-bDX" secondAttribute="bottom" constant="50" id="O6Z-fk-krJ"/>
+                            <constraint firstItem="7FE-FF-ehj" firstAttribute="width" secondItem="FyR-Q9-3Rl" secondAttribute="height" multiplier="1:3" id="OSa-WL-pKX"/>
+                            <constraint firstItem="FyR-Q9-3Rl" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Ojh-b4-nQz"/>
+                            <constraint firstItem="akr-om-bDX" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Piw-kV-Ryc"/>
+                            <constraint firstItem="7FE-FF-ehj" firstAttribute="leading" secondItem="FyR-Q9-3Rl" secondAttribute="trailing" constant="30" id="SDR-IS-t07"/>
+                            <constraint firstItem="kNY-6s-V5y" firstAttribute="top" secondItem="Odi-c4-9f7" secondAttribute="bottom" constant="5" id="SZn-xQ-okC"/>
+                            <constraint firstItem="Odi-c4-9f7" firstAttribute="top" secondItem="wFf-Dz-vJo" secondAttribute="bottom" constant="5" id="Tjk-yU-qEU"/>
+                            <constraint firstItem="Odi-c4-9f7" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="kNY-6s-V5y" secondAttribute="trailing" id="aV6-lb-713"/>
+                            <constraint firstItem="Odi-c4-9f7" firstAttribute="leading" secondItem="kNY-6s-V5y" secondAttribute="leading" id="arA-xf-ERu"/>
+                            <constraint firstItem="FyR-Q9-3Rl" firstAttribute="leading" secondItem="Sk9-ws-afy" secondAttribute="trailing" constant="30" id="b5b-XW-97T"/>
+                            <constraint firstItem="7FE-FF-ehj" firstAttribute="bottom" secondItem="FyR-Q9-3Rl" secondAttribute="bottom" id="kGe-5u-Gup"/>
+                            <constraint firstItem="wFf-Dz-vJo" firstAttribute="top" secondItem="FyR-Q9-3Rl" secondAttribute="bottom" constant="50" id="vmm-cD-ZiO"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="earth" width="512" height="512"/>
+        <image name="news" width="130" height="130"/>
+        <image name="rss" width="512" height="512"/>
+    </resources>
 </document>
