--- a/MyRSS/Base.lproj/Main.storyboard
+++ b/MyRSS/Base.lproj/Main.storyboard
@@ -17,18 +17,18 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="RSSTableViewCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RSSTableViewCell" id="f6F-gO-uaj" customClass="RSSTableViewCell" customModule="MyRSS" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="155.5"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="RSSTableViewCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RSSTableViewCell" rowHeight="155" id="f6F-gO-uaj" customClass="RSSTableViewCell" customModule="MyRSS" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="155"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="f6F-gO-uaj" id="iOd-WN-3WA">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="155.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="155"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder_img" translatesAutoresizingMaskIntoConstraints="NO" id="uyc-Q2-ngu">
-                                            <rect key="frame" x="20" y="11" width="90" height="128.5"/>
+                                            <rect key="frame" x="20" y="11" width="90" height="128"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="90" id="WRp-xQ-CLl"/>
-                                                <constraint firstAttribute="height" constant="128" id="XKw-gg-3lk"/>
+                                                <constraint firstAttribute="width" constant="90" id="hzq-66-Tnd"/>
+                                                <constraint firstAttribute="height" constant="128" id="ohS-Hn-emk"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d58-qc-0yD">
@@ -40,48 +40,48 @@
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5TW-4c-RGU">
                                             <rect key="frame" x="118" y="44" width="276" height="55"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="55" id="NsJ-CM-VgD"/>
+                                                <constraint firstAttribute="height" constant="55" id="33Z-FL-xG8"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KqZ-OY-8U8">
-                                            <rect key="frame" x="118" y="121.5" width="13" height="18"/>
+                                            <rect key="frame" x="118" y="121" width="13" height="18"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9s6-gI-SHr">
-                                            <rect key="frame" x="138.5" y="121.5" width="13" height="18"/>
+                                            <rect key="frame" x="138.5" y="121" width="13" height="18"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3UC-Rq-KNb">
-                                            <rect key="frame" x="159" y="121.5" width="13" height="18"/>
+                                            <rect key="frame" x="159" y="121" width="13" height="18"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="5TW-4c-RGU" firstAttribute="leading" secondItem="d58-qc-0yD" secondAttribute="leading" id="2UH-Rm-Zxd"/>
-                                        <constraint firstItem="3UC-Rq-KNb" firstAttribute="leading" secondItem="9s6-gI-SHr" secondAttribute="trailing" constant="7.5" id="Cpl-ut-wtp"/>
-                                        <constraint firstItem="9s6-gI-SHr" firstAttribute="leading" secondItem="KqZ-OY-8U8" secondAttribute="trailing" constant="7.5" id="HTq-QL-ebH"/>
-                                        <constraint firstItem="KqZ-OY-8U8" firstAttribute="bottom" secondItem="uyc-Q2-ngu" secondAttribute="bottom" id="MlM-uV-soY"/>
-                                        <constraint firstItem="9s6-gI-SHr" firstAttribute="bottom" secondItem="KqZ-OY-8U8" secondAttribute="bottom" id="NGN-uS-C8W"/>
-                                        <constraint firstAttribute="trailing" secondItem="5TW-4c-RGU" secondAttribute="trailing" constant="20" id="ScI-ff-oaA"/>
-                                        <constraint firstAttribute="trailing" secondItem="d58-qc-0yD" secondAttribute="trailing" constant="20" id="Xvm-s7-svw"/>
-                                        <constraint firstItem="KqZ-OY-8U8" firstAttribute="leading" secondItem="5TW-4c-RGU" secondAttribute="leading" id="b3h-TK-NlT"/>
-                                        <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="3UC-Rq-KNb" secondAttribute="trailing" constant="242" id="bmO-kS-vEm"/>
-                                        <constraint firstItem="5TW-4c-RGU" firstAttribute="top" secondItem="d58-qc-0yD" secondAttribute="bottom" constant="7.5" id="dFn-dw-twC"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="uyc-Q2-ngu" secondAttribute="bottom" constant="5" id="n16-bx-ZW2"/>
-                                        <constraint firstItem="d58-qc-0yD" firstAttribute="leading" secondItem="uyc-Q2-ngu" secondAttribute="trailing" constant="8" id="pbC-G2-KCt"/>
-                                        <constraint firstItem="uyc-Q2-ngu" firstAttribute="leading" secondItem="iOd-WN-3WA" secondAttribute="leadingMargin" id="qFd-VV-FKS"/>
-                                        <constraint firstItem="uyc-Q2-ngu" firstAttribute="top" secondItem="iOd-WN-3WA" secondAttribute="topMargin" id="wLS-Pl-pVx"/>
-                                        <constraint firstItem="d58-qc-0yD" firstAttribute="top" secondItem="uyc-Q2-ngu" secondAttribute="top" id="wrg-Rc-sHn"/>
-                                        <constraint firstItem="3UC-Rq-KNb" firstAttribute="bottom" secondItem="9s6-gI-SHr" secondAttribute="bottom" id="yg6-wR-2e1"/>
+                                        <constraint firstItem="9s6-gI-SHr" firstAttribute="leading" secondItem="KqZ-OY-8U8" secondAttribute="trailing" constant="7.5" id="7Js-C0-z29"/>
+                                        <constraint firstItem="KqZ-OY-8U8" firstAttribute="leading" secondItem="uyc-Q2-ngu" secondAttribute="trailing" constant="8" id="DAO-Vr-4DA"/>
+                                        <constraint firstItem="d58-qc-0yD" firstAttribute="leading" secondItem="uyc-Q2-ngu" secondAttribute="trailing" constant="8" id="HAd-R3-7qA"/>
+                                        <constraint firstItem="3UC-Rq-KNb" firstAttribute="leading" secondItem="9s6-gI-SHr" secondAttribute="trailing" constant="7.5" id="PBt-6I-oOy"/>
+                                        <constraint firstItem="5TW-4c-RGU" firstAttribute="leading" secondItem="d58-qc-0yD" secondAttribute="leading" id="SCs-iw-8Tf"/>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="3UC-Rq-KNb" secondAttribute="trailing" constant="8" id="YD2-Cd-goX"/>
+                                        <constraint firstItem="uyc-Q2-ngu" firstAttribute="top" secondItem="iOd-WN-3WA" secondAttribute="topMargin" id="nYF-e9-vh0"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="uyc-Q2-ngu" secondAttribute="bottom" constant="5" id="oPm-Xe-m5u"/>
+                                        <constraint firstAttribute="trailing" secondItem="d58-qc-0yD" secondAttribute="trailing" constant="20" id="p0g-eO-CL6"/>
+                                        <constraint firstItem="uyc-Q2-ngu" firstAttribute="bottom" secondItem="9s6-gI-SHr" secondAttribute="bottom" id="rYZ-Y7-ZzS"/>
+                                        <constraint firstItem="5TW-4c-RGU" firstAttribute="trailing" secondItem="d58-qc-0yD" secondAttribute="trailing" id="ugO-nO-yPT"/>
+                                        <constraint firstItem="uyc-Q2-ngu" firstAttribute="leading" secondItem="iOd-WN-3WA" secondAttribute="leadingMargin" id="uiB-mS-dkT"/>
+                                        <constraint firstItem="uyc-Q2-ngu" firstAttribute="top" secondItem="d58-qc-0yD" secondAttribute="top" id="wOc-7M-CUP"/>
+                                        <constraint firstItem="uyc-Q2-ngu" firstAttribute="bottom" secondItem="KqZ-OY-8U8" secondAttribute="bottom" id="yyJ-sL-v3n"/>
+                                        <constraint firstItem="uyc-Q2-ngu" firstAttribute="bottom" secondItem="3UC-Rq-KNb" secondAttribute="bottom" id="zRs-5m-cde"/>
+                                        <constraint firstItem="5TW-4c-RGU" firstAttribute="top" secondItem="d58-qc-0yD" secondAttribute="bottom" constant="7.5" id="zSh-Xm-qPz"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
